@@ -1,0 +1,51 @@
+.\" RCSid $Id$
+.TH "LTPICT" "1" "08/04/14" "RADIANCE" ""
+.SH "NAME"
+ltpict \- render a four\-view image of a light source
+.SH "SYNOPSIS"
+.B ltpict
+[
+.B \-i
+][
+.B "\-d dimensions"
+]
+input
+.SH "DESCRIPTION"
+.I ltpict
+is a script that renders a four\-view HDR image of a Radiance luminaire
+or IES photometric file.  The
+.I \-i
+option tells it that the file name given is 
+an IES photometry file rather then a Radiance description of a 
+luminiare.  In this case, Radiance's
+.I ies2rad(1)
+is called with its default settings to convert the IES file to a 
+Radiance object.
+.PP 
+The four projections presented are the lower hemisphere
+(displayed in the upper left quadrant), the upper hemisphere
+(upper right), the C0\-C180 plane (lower left) and the
+C90\-C270 plane (lower right).
+.PP 
+Only one Radiance luminaire description or IES photometry file
+may be given.  No input is accepted on STDIN.
+.PP 
+The output image in HDR format is produced on STDOUT with
+the default dimensions of 1024 by 1024 pixels.  The dimensions
+may be overwritten with the 
+.I "\-d dimensions
+option which takes an integer that is divisible by two.
+.SH "EXAMPLES"
+To render a four\-view image of photometry file ABC123.ies
+and save the result to luminaire.hdr
+.IP "" .2i
+ltpict \-i ABC123.ies > luminaire.hdr
+.PP 
+To render a small four\-view HDR image of the 
+RADIANCE luminaire XYZ456.rad to STDOUT, and display it with ximage
+.IP "" .2i
+ltpict \-d 400 XYZ456.rad | ximage
+.SH "AUTHOR"
+Axel Jacobs
+.SH "SEE ALSO"
+objline(1), objview(1), objpict(1), ies2rad(1), ltview(1)
